<resources>
    <string name="app_name">AlfaResto-CustomersApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menuimage">menuImage</string>
    <string name="cartlogo">cartLogo</string>
    <string name="list_all_menu">List All Menu</string>
    <string name="_0">0</string>
    <string name="add_to_menu">Add to Menu</string>
    <string name="alfaresto">AlfaResto</string>
    <string name="menu_image">menu image</string>
    <string name="logo">logo</string>
    <string name="deliver_to">Deliver to:</string>
    <string name="hi_bella">Hi, Bella!</string>
    <string name="menuimageview">menuImageView</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="register">Register</string>
    <string name="email_hint">email@gmail.com</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="reenter_password">Re-enter Password</string>
    <string name="login">Login</string>
    <string name="user_email">User Email</string>
    <string name="direct_to_login">Already have an account? Login here</string>
    <string name="register_here">Register here</string>
    <string name="no_telp">No. Telp</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="login_success">Login Success</string>
    <string name="login_failed">Login Failed</string>
    <string name="register_success">Register Success</string>
    <string name="register_failed">Register Failed. This email is already used.</string>
    <string name="email_pass_empty">Email or password is empty</string>
    <string name="email_not_valid">Email is not valid</string>
    <string name="password_not_valid">Password is not valid</string>
    <string name="password_not_match">Password is not match</string>
    <string name="login_image">Login Image</string>
    <string name="welcome_back">Welcome Back !</string>
    <string name="please_sign_in_to_continue">Please sign in to continue</string>
    <string name="splash_screen_description">Splash Screen</string>
    <string name="alfaresto_logo">Alfaresto Logo</string>
    <string name="logout_logo">Logout logo</string>
    <string name="confirmation_alert">Confirmation</string>
    <string name="logout_confirmation">Are you sure you want to logout?</string>
    <string name="logout">Logout</string>
    <string name="cancel_logout">Cancel</string>
</resources>